fixed alignment

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,5 +1,5 @@
 .App {
-    width: 100vw;
+    width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -7,15 +7,21 @@
     flex-direction: column;
     gap: 5vh;
     backdrop-filter: 5px;
-    background-color: rgb(32, 32, 32);
-    background-image: url("https://janschreiber.github.io/img2/black-chalk.jpg");
+    /* background-color: rgb(32, 32, 32); */
+    /* background-image: url("https://janschreiber.github.io/img2/black-chalk.jpg"); */
     padding-left: 20%;
     padding-right: 20%;
 }
 
+.footer {
+    padding-bottom: 5px;
+    position: absolute;
+    bottom: 0;
+}
+
 .board-container {
-    width: 70%;
-    padding-bottom: 70%;
+    width: 100%;
+    padding-bottom: 100%;
     position: relative;
 }
 
@@ -93,17 +99,19 @@ button:focus {
 }
 
 
+
+
 @media screen and (min-width: 768px) {
     .board-container {
-        width: 60%;
-        padding-bottom: 60%;
+        width: 100%;
+        padding-bottom: 100%;
     }
 }
 
 @media screen and (min-width: 1024px) {
     .board-container {
-        width: 40%;
-        padding-bottom: 40%;
+        width: 80%;
+        padding-bottom: 80%;
     }
 }
 
@@ -122,5 +130,10 @@ button:focus {
 @media screen and (min-width: 1098px) {
     .winner {
         width: 20%;
+    }
+
+    .board-container {
+        width: 50%;
+        padding-bottom: 50%;
     }
 }
