--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,8 +1,4 @@
-.footer {
-    padding-bottom: 5px;
-    position: absolute;
-    bottom: 0;
-}
+
 
 p {
     text-align: center;
