--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,3 +13,11 @@ body {
   font-family: 'Indie Flower', 'Comic Sans', cursive;
   font-size: 0.7em;
 }
+
+html {
+  height: 100%;
+  width: 100%;
+  display: flex;
+    justify-content: center;
+    align-items: center;
+}
